@@ -2,4 +2,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
 "2022-11-08" "3.0-4" 226 507 0 30638 6295
 "2023-01-26" "3.0-6" 226 507 0 30644 6295
-"2023-02-19" "3.0-6.003" 226 507 0 30693 6295
+"2023-02-20" "3.0-6.004" 226 507 0 30697 6295
